--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 gym==0.12.1
-tensorflow==1.15.0
+tensorflow==1.14.0
 PyVirtualDisplay==0.2.4
 scipy==1.2.1
 matplotlib==3.0.3
@@ -9,6 +9,7 @@ boto3==1.9.125
 scikit_image==0.14.2
 pandas==0.24.2
 tqdm==4.31.1
+Cython==0.29.14
 quadprog==0.1.6
 aiobotocore==0.11.0
 flow==0.0.1
@@ -16,4 +17,3 @@ lib==3.0.0
 paramiko==2.7.1
 Pillow==6.2.1
 scikit_learn==0.22
-skimage==0.0
