Change reqs + Add tutorial jupyter

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
-gym==0.12.1
-tensorflow==1.14.0
-PyVirtualDisplay==0.2.4
-scipy==1.2.1
-matplotlib==3.0.3
-numpy==1.16.2
+gym
+numpy
+scikit-image
+scikit-learn
+Cython
+tensorflow==1.15
+PyVirtualDisplay
+scipy
+matplotlib
 Keras==2.2.4
-boto3==1.9.125
-scikit_image==0.14.2
-pandas==0.24.2
-tqdm==4.31.1
-Cython==0.29.14
-quadprog==0.1.6
-aiobotocore==0.11.0
-flow==0.0.1
-lib==3.0.0
-paramiko==2.7.1
-Pillow==6.2.1
-scikit_learn==0.22
+boto3
+scikit_image
+pandas
+tqdm
+quadprog
+aiobotocore
+flow
+lib
+paramiko
+Pillow
+jupyter
